--- a/lecturer/templates/lecturer/student.html
+++ b/lecturer/templates/lecturer/student.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block head_title %} Home | StudyWare Dashboard {% endblock %}
+{% block head_title %} Student | StudyWare Dashboard {% endblock %}
 
 {% block content %}
 <nav aria-label="breadcrumb">
