--- a/student/templates/student/course_list.html
+++ b/student/templates/student/course_list.html
@@ -21,6 +21,8 @@
     <h5 class="mb-0">{{ session }}</h5>
 </div>
 
+<div class="alert alert-info text-center" role="alert"><b>Registered Courses</b></div>
+
 <div class="row mb-4">
     <div class="col-md-12 col-lg-12">
         <div class="card mb-4 pb-0">
