--- a/lecturer/templates/lecturer/exam/question_change_form.html
+++ b/lecturer/templates/lecturer/exam/question_change_form.html
@@ -18,16 +18,16 @@
 {% endblock %}
 
 
-{% block head_title %} Assessment - TMA | StudyWare {% endblock %}
+{% block head_title %} Assessment - Exam | StudyWare {% endblock %}
 
 
 
 {% block content %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb mt-4">
-      <li class="breadcrumb-item"><a href="{% url 'lecturer:tma_index' %}">Tutor Marked Assesment</a></li>
-      <li class="breadcrumb-item"><a href="{% url 'lecturer:tma_question' tma.pk %}">{{ tma.title|upper }}</a></li>
-        <li class="breadcrumb-item"><a href="#">Question</a></li>
+      <li class="breadcrumb-item"><a href="{% url 'lecturer:exam_index' %}">Examination</a></li>
+      <li class="breadcrumb-item"><a href="{% url 'lecturer:exam_questions' exam.pk %}">{{ exam.course|upper }}</a></li>
+        <li class="breadcrumb-item">Question</li>
       <li class="breadcrumb-item active" aria-current="page">{{ question.id }}</li>
     </ol>
   </nav>
@@ -35,7 +35,7 @@
 <div class="row">
     <div class="col-md-12 col-lg-12">
         <div class="card">
-            <div class="card-header text-center">{{ tma.course.code }} - {{ tma.title|upper }}</div>
+            <div class="card-header text-center">{{ exam.course }} - {{ exam.course.title|upper }}</div>
             <div class="card-body">
   <form method="post" novalidate>
     {% csrf_token %}
@@ -43,12 +43,11 @@
       <div class="mathfield" id='mf'></div>
     {{ form|crispy }}
 
-
     <div class="card mb-3{% if formset.errors %} border-danger{% endif %}">
       <div class="card-header">
         <div class="row">
           <div class="col-8">
-            <strong>Answers</strong>
+            <strong>{% if question.type == 'MCQ'%} Answers {% else %} Answer {% endif %}</strong>
           </div>
           <div class="col-2">
             <strong>Correct?</strong>
@@ -87,18 +86,31 @@
         {% endfor %}
       </div>
     </div>
+
     <p>
-      <small class="form-text text-muted">Your question may have at least <strong>3</strong> answers and maximum <strong>4</strong> answers. Select at least one correct answer.</small>
-    </p>
+      {% if question.type == 'MCQ'%}
+       <small class="form-text text-muted">Your question may have at least <strong>3</strong> answers and maximum <strong>4</strong> answers. Select at least one correct answer.</small>
+      {% else %}
+       <small class="form-text text-muted">Your question may have <strong>1</strong> correct answer</small>
+      {% endif %}
+      </p>
     <button type="submit" class="btn btn-success">Save changes</button>
-    <a href="{% url 'lecturer:tma_question' tma.pk %}" class="btn btn-outline-secondary" role="button">Back</a>
-      <button type="button" class="btn btn-outline-danger question-delete ml-2 mr-2 float-right" data-url="{% url 'lecturer:question_delete' tma.pk question.pk %}" style="border-radius:50px;"><i class="fa fa-trash"></i></button>
+    <a href="{% url 'lecturer:exam_questions' exam.pk %}" class="btn btn-outline-secondary" role="button">Back</a>
+    <button type="button" class="btn {% if question.type == 'MCQ'%} btn-outline-info{% else %}btn-outline-warning{% endif %} btn-outline-info float-right" disabled>{{ question.type|upper }}</button>
+      <button type="button" class="btn btn-outline-danger question-delete ml-2 mr-2 float-right" data-url="" style="border-radius:50px;"><i class="fa fa-trash"></i></button>
   </form>
             </div>
         </div>
     </div>
 </div>
 <script type="text/javascript" src="{% static 'assets/vendor/jquery3/jquery.min.js' %}"></script>
+{% if question.type == 'FBQ'%}
+<script type="text/javascript">
+$(document).ready(function () {
+  $('#id_exam_answers-0-is_correct').prop("checked", true);
+});
+</script>
+{% endif %}
 <script type="text/javascript">
     $(".question-delete").click(function(){
         var btn = $(this);
@@ -116,9 +128,9 @@
     });
     });
 
-    
 </script>
-<!-- TMA-MODAL-->
+
+<!-- Exam-MODAL-->
 <div class="modal fade" id="modal-question">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
