--- a/student/templates/student/tma/take_tma_form.html
+++ b/student/templates/student/tma/take_tma_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load static humanize crispy_forms_tags  %}
+{% load static humanize crispy_forms_tags tma_extras  %}
 
 {% block head_title %} TMA Portal | StudyWare {% endblock %}
 
@@ -34,6 +34,19 @@
     input[type=radio]:checked + label:before{
     box-shadow: inset 0 0 0 5px #2196F3;
     }
+
+    @media only screen and (max-width: 1000px) {
+  .laptop {
+    display: none;
+  }
+  }
+  /* laptop-view */
+
+@media only screen and (min-width: 1000px) {
+  .mobile {
+    display: none;
+  }
+  }
 </style>
 {% endblock %}
 
@@ -46,7 +59,7 @@
 {% block body %}
 
 {% if user.passport_uploaded %}
-
+<div class="text-center middle-banner"><h1><span class="fas fa-user-graduate"></span> STUDY<b>WARE</b></h1></div>
 <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: dodgerblue; height:55px;">
     <h5 class="text-center text-white mb-0 " style="margin-left:43%;">
         <div class="badge badge-warning">{{ tma.course.code}}</div> <strong>{{tma.title|upper}}</strong>
@@ -56,27 +69,26 @@
 <div class="container-fluid mt-5">
     <div class="row mb-5">
         <div class="col-md-8 col-lg-8">
-            <div class="card">
-                <div class="card-header text-danger">Please Read The Questions Carefully</div>
+            <div class="card mb-2">
                 <div class="card-body">
-                    {% comment %} <div class="progress mb-3">
+                     <div class="progress mb-3">
                         <div class="progress-bar" role="progressbar" aria-valuenow="{{ progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ progress }}%"></div>
-                    </div> {% endcomment %}
-                    <h5><span class="badge badge-secondary">{{ answered_questions|add:"1" }}/{{total_questions}}</span></h5>
-                    
-                    <h2 class="mb-3">{{ tma.course.title }}</h2>
+                    </div>
+                    <h5>
+                        <span class="badge badge-secondary">{{ answered_questions|add:"1" }}/{{total_questions}}</span>
+                    </h5>
+                    <h4 class="mb-3">{{ tma.course.title }}</h4>
                     <p class="lead"> {{ question.text }}</p>
                     <form method="post" novalidate>
                         {% csrf_token %}
                         {{ form|crispy }}
-                        <button type="submit" class="btn rounded-pill btn-outline-success float-right"><i class="fa fa-angle-double-right" aria-hidden="true"></i></button>
+                        <button type="submit" class="btn btn-lg rounded-pill btn-outline-success float-right"><i class="fa fa-angle-double-right" aria-hidden="true"></i></button>
                     </form>
                 </div>
             </div>
         </div>
         <div class="col-md-4 col-lg-4">
-            <div class="card">
-                <div class="card-header float-right"><span class="fas fa-user"></span> Your Profile</div>
+            <div class="card laptop">
                 <div class="card-body">
                     <div class="mb-3 mt-3">
                         <img class="mx-auto d-block img-thumbnail" src="{{ user.photo.url }}" width="150" height="150">
@@ -90,10 +102,20 @@
                     </div>
                 </div>
             </div>
+            <div class="col pt-5 mt-2">
+                {% for question in tma.tma_questions.all %}{% for opt in question.tma_answers.all %}
+                {% marked_tma_answer user opt as opt_marked %} {% user_answer user opt as user_opt %}
+                {% if user_opt %}
+                <button type="button" class="btn rounded-pill {% if opt_marked == 'correct' %} btn-success{% elif opt_marked == 'wrong' %} btn-danger{% endif %}" disabled>{{forloop.counter }}</button>
+                {% endif %}
+                {% endfor %}
+                {% endfor %}
+            </div>
         </div>
     </div>
 </div>
 
+<br>
 
 {% else %}
 <style>
