--- a/templates/registration/signup_form.html
+++ b/templates/registration/signup_form.html
@@ -107,23 +107,36 @@
 					 {% if user_type == 'student' %}
 						<div class="form-row">
 							<div class="form-group col-md-6 mb-0">
-								{{ form.programme|as_crispy_field }}
+								{{ form.level|as_crispy_field }}
 							</div>
 							<div class="form-group col-md-6 mb-0">
 								{{ form.study_centre|as_crispy_field }}
+							</div>
+						</div>
+						<div class="form-group">
+							{{ form.programme|as_crispy_field }}
+						</div>
+						<div class="form-row">
+							<div class="form-group col-md-6 mb-0">
+								{{ form.password1|as_crispy_field }}
+							</div>
+							<div class="form-group col-md-6 mb-0">
+								{{ form.password2|as_crispy_field }}
 							</div>
 						</div>
 						{% else %}
 						<div class="form-group">
 							{{ form.username|as_crispy_field }}
 						</div>
-						{% endif %}
 						<div class="form-group">
 							{{ form.password1|as_crispy_field }}
 						</div>
 						<div class="form-group">
 							{{ form.password2|as_crispy_field }}
 						</div>
+						{% endif %}
+
+
 						{% csrf_token %}
 						<button type="button" class="btn btn-previous btn-primary">Previous</button>
 						<button type="submit" class="btn btn-success">Create Account <i class="fas fa-check-circle"></i></button>
