--- a/student/templates/student/board/reply_topic.html
+++ b/student/templates/student/board/reply_topic.html
@@ -5,14 +5,18 @@
 {% block head_title %} Topic - Post | StudyWare Dashboard {% endblock %}
 
 {% block extra_css %}
-<link href="{% static 'assets/vendor/simplemde/simplemde.min.css' %}" rel="stylesheet"/>
+<link href="{% static 'assets/vendor/summernote/summernote-bs4.css' %}" rel="stylesheet"/>
 {% endblock %}
 
 {% block js %}
-<script src="{% static 'assets/vendor/simplemde/simplemde.min.js' %}"></script>
+<!-- Summernote -->
+<script src="{% static 'assets/vendor/summernote/summernote-bs4.min.js' %}"></script>
 <script>
-   var simplemde = new SimpleMDE({forceSync: true})
- </script>
+  $(function () {
+    // Summernote
+    $('.textarea').summernote()
+  })
+</script>
 {% endblock %}
 
 {% block content %}
